# zero-bounce-python-sdk-setup

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  README.rst  SECURITY.md  Sample.py  documentation.md  documentation_es.md  email_file.csv  pyproject.toml  setup.py
.github/: auto_assign.yml  dependabot.yml
.github/workflows/: auto_assign_ci.yaml  codeql.yml  publish.yml  sdk_ci.yml
src/zerobouncesdk/: __init__.py  _zb_response.py  _zb_utils.py  zb_api_url.py  zb_confidence.py  zb_delete_file_response.py  zb_download_type.py  zb_exceptions.py  zb_file_status_response.py  zb_find_domain_response.py  zb_find_email_format_response.py  zb_find_email_response.py  zb_get_activity_response.py  zb_get_api_usage_response.py  zb_get_credits_response.py  zb_get_file_options.py  zb_get_file_response.py  zb_guess_format_response.py  zb_send_file_response.py  zb_validate_batch_response.py  zb_validate_response.py  zb_validate_status.py  zb_validate_sub_status.py  zerobouncesdk.py
tests/: __init__.py  __main__.py  zero_bounce_integration_test.py  zero_bounce_test_case.py
zerobouncesdk/: __init__.py  _zb_response.py  http_request.py  zb_activity_data.py  zb_delete_file_response.py  zb_email_batch_element.py  zb_exceptions.py  zb_file_status_response.py  zb_get_api_usage_response.py  zb_get_credits_response.py  zb_get_file_response.py  zb_send_file_response.py  zb_validate_batch_element.py  zb_validate_response.py  zb_validate_status.py  zb_validate_sub_status.py  zerobouncesdk.py
