[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerobounceindiasdk"
version = "1.0.0"
description = "ZeroBounce India Python API - https://www.zerobounce.in."
readme = "README.md"
authors = [{ name = "ZeroBounce", email = "support@zerobounce.net" }]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["zero", "bounce", "india", "sdk"]
dependencies = ["requests >= 2.22.0"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/zerobounce/zero-bounce-india-python-sdk-setup"
