[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerobouncesdk"
version = "2.0.2"
description = "ZeroBounce Python API - https://www.zerobounce.net."
readme = "README.md"
authors = [{ name = "ZeroBounce", email = "support@zerobounce.net" }]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["zero", "bounce", "sdk"]
dependencies = ["requests >= 2.22.0"]
requires-python = ">=3.7"

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
Homepage = "https://github.com/zerobounce/zero-bounce-python-sdk-setup"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "zero_bounce_test_case.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*__main__*", "*/__main__*"]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError"]
